--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js": "^0.1.0",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5"
