--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "api-rest-curso-udemy": "file:",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "helmet": "^8.0.0",
     "js": "^0.1.0",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
